# ML-Text-Summarizer

./: .replit  pyproject.toml  pytesseract_demo.py  sites.txt  summarize.py  website.py
wikihow/: test.target
