[tool.poetry]
name = "ml-text-summarizer"
version = "0.1.0"
description = ""
authors = ["Replit user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytesseract = "^0.3.7"
nltk = "^3.5"
uvicorn = "^0.13.4"
fastapi = "^0.63.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
